# Quality-AI-Intelligence

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  RUNBOOK.md  TESTING.md  TEST_GUIDE.md  WRITEUP.md  docker-compose.override.yml  docker-compose.yml  package.json  pyproject.toml  test_workflow.py
adk_agent/: __init__.py  agents.py  backend_client.py  business.py  dashboard_api.py  demo.py  dispatch.py  guardrails.py  llm.py  mcp_server.py  monitor.py  prompts.py  reasoning.py  run.py  sample_data.py  skills.py  state.py  web.py
adk_agent/tests/: test_adk_layer.py  test_backend_client.py  test_fleet_reasoning.py  test_state.py
agent/: alert_manager.py  alerts.py  llm_analyst.py  mes_connector.py  monitor.py
agent/templates/: alert_email.html
api/: ai_routes.py  main.py  quality_routes.py  startup.py
backend/services/: audit_logger.py  gemini_service.py
core/: config.py  settings_store.py  spc_baseline_store.py
dashboard/: package-lock.json  package.json
dashboard/src/api/: apiClient.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/agent/[[...path]]/: route.ts
dashboard/src/components/agent/: AgentCore.tsx
dashboard/src/components/layout/: CommandBar.tsx  SettingsModal.tsx  Sidebar.tsx  WelcomeGuide.tsx
dashboard/src/components/pages/: AIAgentPage.tsx  AlertRulesPage.tsx  AlertsPage.tsx  AuditPage.tsx  ChatPage.tsx  DashboardPage.tsx  GRRPage.tsx  GagesPage.tsx  IntegrationsPage.tsx  SPCPage.tsx
dashboard/src/components/reports/: GRRPdfReport.tsx
dashboard/src/components/ui/: HelpTip.tsx  fx.tsx  kit.tsx
dashboard/src/lib/: mock-data.ts  store.ts  utils.ts
db/: models.py
demo-video/: build_video.py  capture_screenshots.py  generate_voiceover.py  scenes.json
deploy/adk_agents/quality_app/: agent.py
docker/agent/: Dockerfile
docker/api/: Dockerfile
docs/: generate_setup_guide.py
docs/assets/: build_architecture.py
grr/: calculator.py  report_generator.py
monitoring/grafana/dashboards/: arad-quality-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
notebook/: capstone_demo.ipynb
scripts/: adk_build_notebook.py  adk_make_charts.py  bootstrap.py  bootstrap_env.py  docker_api_entrypoint.sh
spc/: baseline.py
tests/: test_alerts_null_created_at.py  test_bootstrap.py  test_integrations_status.py  test_mes_connector.py  test_monitor.py  test_upload.py
tests/integration/: test_alert_manager.py
tests/performance/: test_grr_performance.py
